@@ -1,17 +1,10 @@
 /* pam_time module */
 
 /*
- * $Id$
- *
  * Written by Andrew Morgan <morgan@linux.kernel.org> 1996/6/22
  * (File syntax and much other inspiration from the shadow package
  * shadow-960129)
  */
-
-static const char rcsid[] =
-"$Id$;\n"
-"\t\tVersion 0.22 for Linux-PAM\n"
-"Copyright (C) Andrew G. Morgan 1996 <morgan@linux.kernel.org>\n";
 
 #include "config.h"
 
@@ -27,6 +20,7 @@ static const char rcsid[] =
 #include <sys/types.h>
 #include <sys/stat.h>
 #include <fcntl.h>
+#include <netdb.h>
 
 #define PAM_TIME_BUFLEN        1000
 #define FIELD_SEPARATOR        ';'   /* this is new as of .02 */
@@ -522,7 +516,11 @@ check_account(pam_handle_t *pamh, const char *service,
 			  "%s: no user entry #%d", PAM_TIME_CONF, count);
 	       continue;
 	  }
-	  good &= logic_field(pamh, user, buffer, count, is_same);
+	  /* If buffer starts with @, we are using netgroups */
+	  if (buffer[0] == '@')
+	    good &= innetgr (&buffer[1], NULL, user, NULL);
+	  else
+	    good &= logic_field(pamh, user, buffer, count, is_same);
 	  D(("with user: %s", good ? "passes":"fails" ));
 
 	  /* here we get the time field */
