@@ -20,7 +20,8 @@
 #	is a logic list of terminal names that this rule applies to.
 #
 # users
-#	is a logic list of users to whom this rule applies.
+#	is a logic list of users or a netgroup of users to whom this
+#	rule applies.
 #
 # NB. For these items the simple wildcard '*' may be used only once.
 #
